add cards for student data

--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <title>Student Index</title>
 </head>
 <body>
   <h1>Student List</h1>
-  <ul>
-    <% students.forEach(student => { %>
-      <li>
-				<%= student.name %> 
-				- 
-				<%= student.smart ? 'so smart' : 'not smart' %>
-			</li>
-    <% }) %>
-  </ul>
+  <% students.forEach(student => { %>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title"><%= student.name %> </h5>
+        <h6 class="card-subtitle mb-2 text-muted"><%= student.smart ? 'so smart' : 'not smart' %> </h6>
+        <p class="card-text"><%= student.description %> </p>
+      </div>
+    </div>
+  <% }) %>
 </body>
 </html>
+
